# flickrtoimmich

./: .gitignore  CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Makefile  README.md  build-container-multiarch.sh  build.sh  flickr-docker.sh  flickr_to_immich_anleitung.md  flickr_to_immich_guide.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: buildmultiarchandpush.yml
dist_scripts/: entrypoint.sh  flickr-docker.sh  upload-to-immich.sh  url-opener
flickrtoimmich/: __init__.py  download_dry_run.py  download_wrapper.py  immich_uploader.py  list_albums.py
repo_scripts/: blurimage.py  build-container-multiarch.sh  check_dockerhub_token.py  include.sh  md2pdf.sh  update_badge.py
scripts/: include.sh  update_badge.py
tests/: test_base.py
